--- a/src/main/webapp/plugins/ueditor/formdesign/text.html
+++ b/src/main/webapp/plugins/ueditor/formdesign/text.html
@@ -130,9 +130,13 @@ function createElement(type, name) {
        <th><span>宽度(px)</span></th>
        <td><input id="orgwidth" type="text" value="200" placeholder="auto"/></td>
        <th><span>可见性</span></th>
-       <td colspan="3">
+       <td>
          <label class="checkbox inline"><input id="orghide" type="checkbox"/> 隐藏 </label>
        </td>
+        <th><span>记录日志</span></th>
+        <td>
+            <label class="checkbox inline"><input id="is-log" type="checkbox"/> 是 </label>
+        </td>
     </tr>
     <tr>
       <th>关联字段</th>
@@ -142,11 +146,34 @@ function createElement(type, name) {
       	</select>
       </td>
       <th>关联值</th>
-      <td><input id="relate_field_value" type="text"/></td>
-      <th><span>标题</span></th><td><label class="checkbox inline"><input id="institle" type="checkbox"/> 是</label></td>
+      <td colspan="3"><input id="relate_field_value" type="text"/></td>
+
     </tr>
+        <tr>
+            <th><span>记录日志</span></th>
+            <td>
+                <label class="checkbox inline"><input id="is-log" type="checkbox"/> 是 </label>
+            </td>
+            <th><span>标题</span></th>
+            <td colspan="3">
+                <label class="checkbox inline"><input id="institle" type="checkbox"/> 是</label>
+            </td>
+        </tr>
     <tr>
-    	<th><span>默认值</span></th><td colspan="5"><input id="orgvalue" style="width: 95%;" type="text" value="" placeholder="无则不填"/></td>
+    	<th><span>默认值</span></th><td colspan="5">
+    	  <p class="input-default-value">
+    	    <label class="checkbox-inline">
+			  <input type="checkbox" id="ogvalue1" value="${username}"> 登录用户名称 
+			</label>
+			<label class="checkbox-inline">
+			  <input type="checkbox" id="ogvalue3" value="${deptname}"> 登录部门名称 
+			</label>
+			<label class="checkbox-inline">
+			  <input type="checkbox" id="ogvalue5" value="${today}"> 当天日期 
+			</label>
+    	  </p>
+    	  <p>其他值：<input id="orgvalue" style="width: 95%;" type="text" value="" placeholder="无则不填"/></p>
+    	</td>
     </tr>
    </table>
 </div>
@@ -163,11 +190,9 @@ window.onload = function() {
 			$("#input_plugin_uri").addClass("require");
 		}
 	});
+	selectDefaultListener();
 	var tableFieldId = null;
 
-	//alert($iframeHolder.attr("class"));
-	//var selectEle = $(parentDoc).find("select");
-	//alert(selectEle.attr("bind_table_field"));
     if( UE.plugins[thePlugins].editdom ){
         oNode = UE.plugins[thePlugins].editdom;
         oNode.setAttribute('name','leipiNewField');
@@ -181,12 +206,14 @@ window.onload = function() {
 		gInputPlugin = oNode.getAttribute('input_plugin'),gInputPluginUri = oNode.getAttribute('input_plugin_uri'),
 		gWidth=oNode.getAttribute('orgwidth'),gType=oNode.getAttribute('orgtype');
 		var gInsTitle = oNode.getAttribute('institle');
+		var gIsLog = oNode.getAttribute('is_log');
 		
 		gValue = gValue==null ? '' : gValue;
         gTitle = gTitle==null ? '' : gTitle;
         tableDefValue = gBindTable==null?'':gBindTable;
         fieldDefValue = gBindField==null?'':gBindField;
-        $G('orgvalue').value = gValue;
+        //$G('orgvalue').value = gValue;
+        setDefaultValue(gValue);
         if(gType == 'datetime' || gType == 'date' || gType == 'time') {
         	$("#org_date_format").parents("tr:eq(0)").show();
         }
@@ -212,6 +239,9 @@ window.onload = function() {
         }
         if (gInsTitle == '1') {
             $G('institle').checked = true;
+        }
+        if(gIsLog == '1') {
+            $G('is-log').checked = true;
         }
         $G('orgwidth').value = gWidth;
         $G('orgalign').value = gAlign;
@@ -301,7 +331,7 @@ dialog.onok = function (){
  * 
  */
 function setAttr(oNode) {
-	var gValue=$G('orgvalue').value.replace(/\"/g,"&quot;");
+	var gValue = getDefaultValue();
 	var gTitle=$G('orgtitle').value.replace(/\"/g,"&quot;");
     var gAlign=$G('orgalign').value;
     var gWidth=$G('orgwidth').value;
@@ -342,6 +372,11 @@ function setAttr(oNode) {
          oNode.setAttribute('institle',1);
      } else {
          oNode.setAttribute('institle',0);
+     }
+     if($G('is-log').checked) {
+        oNode.setAttribute('is_log',1);
+     } else {
+        oNode.setAttribute('is_log',0);
      }
     if ($G('fieldrequire').checked ) {
         oNode.setAttribute('fieldrequire',1);
@@ -395,6 +430,44 @@ function setAttr(oNode) {
         	oNode.setAttribute('data_format','');
         }
     }
+}
+
+function selectDefaultListener() {
+	$(".input-default-value input").click(function(){
+	   if($(this).prop("checked")) {
+	      $(this).parent().siblings().find("input").prop("checked",false);
+	      $("#orgvalue").val("");
+	      $("#orgvalue").prop("disabled",true);
+	   } else {
+	      $("#orgvalue").prop("disabled",false);
+	   }
+	});
+}
+
+function getDefaultValue() {
+   var value = '';
+   value = $(".input-default-value input:checked").val();
+   if(utils.isEmpty(value)) {
+   	 value = $("#orgvalue").val();
+   	 value = value.replace(/\"/g,"&quot;");
+   }
+   return value;
+}
+
+function setDefaultValue(value) {
+   if(utils.isNotEmpty(value)) {
+      var isCheck = false;
+      $(".input-default-value input").each(function(){
+      		if(this.value == value) {
+      		   $(this).prop("checked",true);
+      		   isCheck = true;
+      		   return false;
+      		}
+      });
+      if(!isCheck) {
+         $("#orgvalue").val(value);
+      }
+   }
 }
 </script>
 </body>
