1.修复表单列表控件多条数据无法显示的问题；2.修复查看表单时内容超出，显示错乱的问题

--- a/src/main/webapp/plugins/ueditor/formdesign/listctrl.html
+++ b/src/main/webapp/plugins/ueditor/formdesign/listctrl.html
@@ -516,7 +516,7 @@ window.onload = function() {
             }
             $G(gBindField).value = aBindField[i];
             if(null != gRemarks && typeof(gRemarks[i]) !== 'undefined') {
-             $G(sRemark).value = gRemarks[i];
+                $G(sRemark).value = gRemarks[i];
             }
         }
     }
@@ -547,7 +547,7 @@ function clickCSum(obj) {
             $("#coltype_"+ i).val('int');
             $("#field_hide_"+i).prop('checked', false);
             //加载合计字段要绑定的表的列表
-            loadCSumTable('','', i)
+            loadCSumTable('','', i);
         } else {
            $("#csum_bind_table_"+i+" .cnoj-dyn-opt").remove();
            $("#csum_bind_table_field_"+i+" .cnoj-dyn-opt").remove();
